# Blinc

./: .gitignore  Cargo.toml  README.md  Skills.md
crates/blinc_animation/: CHANGELOG.md  Cargo.toml
crates/blinc_animation/src/: keyframe.rs  lib.rs  morph.rs
crates/blinc_app/: CHANGELOG.md  Cargo.toml
crates/blinc_app/examples/: canvas_kit_demo.rs  cn_demo.rs  code_demo.rs  css_debug.rs  css_features_demo.rs  flow_demo.rs  fluid_demo.rs  image_css_demo.rs  music_player.rs  overflow_fade_demo.rs  pointer_query_demo.rs  semantic_flow_demo.rs  sortable_demo.rs  styling_demo.rs  svg_animation_demo.rs  tabler_icons_demo.rs  wet_glass_demo.rs
crates/blinc_app/src/: android.rs  app.rs  context.rs  ios.rs  lib.rs  svg_atlas.rs  windowed.rs
crates/blinc_canvas_kit/: Cargo.toml  README.md
crates/blinc_canvas_kit/src/: lib.rs  zoom.rs
crates/blinc_cli/: Cargo.toml
crates/blinc_cn/: CHANGELOG.md  Cargo.toml
crates/blinc_cn/src/: cn_styles.rs  css_overrides.rs  lib.rs
crates/blinc_core/: Cargo.toml
crates/blinc_core/src/: draw.rs  flow.rs  layer.rs  lib.rs  native_bridge.rs
crates/blinc_debugger/: Cargo.toml
crates/blinc_gpu/: CHANGELOG.md  Cargo.toml
crates/blinc_gpu/src/: flow_codegen.rs  flow_pipeline.rs  (+7 more)
crates/blinc_image/: Cargo.toml
crates/blinc_layout/: CHANGELOG.md  Cargo.toml
crates/blinc_paint/: Cargo.toml
crates/blinc_recorder/: Cargo.toml
crates/blinc_runtime/: Cargo.toml
crates/blinc_svg/: CHANGELOG.md  Cargo.toml
crates/blinc_tabler_icons/: Cargo.toml  README.md  build.rs
crates/blinc_tabler_icons/src/: filled.rs  lib.rs  outline.rs
crates/blinc_test_suite/: Cargo.toml
crates/blinc_text/: Cargo.toml
crates/blinc_theme/: Cargo.toml
docs/book/: book.toml
docs/plans/: blinc_router.md
extensions/blinc_platform_android/: Cargo.toml
extensions/blinc_platform_desktop/: Cargo.toml
extensions/blinc_platform_harmony/: Cargo.toml
extensions/blinc_platform_ios/: Cargo.toml
resource/: shader_and_pointer_query.md
scripts/: download_tabler_icons.sh  publish-crates.sh
(+98 files in other folders)
