[package]
name = "blinc_canvas_kit"
description = "Interactive canvas toolkit for game editors and node graphs — pan, zoom, spatial indexing, multi-select, marquee, and snap-to-grid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/blinc_canvas_kit"
rust-version.workspace = true
keywords = ["ui", "gui", "canvas", "editor", "node-graph"]
categories = ["gui", "game-development"]

[lib]
crate-type = ["lib"]

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.1.14" }
blinc_layout = { path = "../blinc_layout", version = "0.1.14" }
